# UNI-GradeManager

./: .gitignore  CMakeConfig.h.in  CMakeLists.txt  README.md  STRUCTURE.md  STRUCTURE.txt  TreeUpdate.md
.github/workflows/: update_structure.yml
assets/documentation/: CMake-Installation.md  Compiler-Installation.md  Gallery-Sketches.md  Gallery.md  Raylib-Raygui-installation.md  Run-program.md
data/: classes.txt  courses.txt  grades.txt  students.txt
include/: courses.h  grades.h  students.h
include/cli/: utils.h
include/gui/: classes.h  colors.h  courses.h  globals.h  grades.h  loginscreen.h  popup.h  popups.h  sidebar.h  students.h  utils.h
src/: classes.cpp  colors_example.cpp  courses.cpp  grades.cpp  main.cpp  main_cli.cpp  main_gui.cpp  students.cpp  utils.cpp
src/cli/: classes.cpp  courses.cpp  grades.cpp  main.cpp  students.cpp  utils.cpp
src/gui/: classes.cpp  courses.cpp  globals.cpp  grades.cpp  loginscreen.cpp  main.cpp  popup.cpp  popups.cpp  sidebar.cpp  students.cpp  utils.cpp
